--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,9 @@
 
 
+<%- include("layout") -%>
 
+
+<%- include("preloader") -%>
 
 
 
@@ -58,6 +61,7 @@
 
 
 
+  <%-include('/cart/views/partials/footer')-%>
 
 
 
