--- a/views/ebook.ejs
+++ b/views/ebook.ejs
@@ -1,7 +1,7 @@
 
-<%-include('/cart/views/layout')-%>
+<%-include('../views/layout')-%>
 
-<%-include('/cart/views/partials/sidenav')-%>
+<%-include('../views/partials/sidenav')-%>
 
 
 
