--- a/views/categories/computer_notes.ejs
+++ b/views/categories/computer_notes.ejs
@@ -1,7 +1,8 @@
-<%-include('/cart/views/layout')-%>
 
-<%-include('/cart/views/partials/sidenav')-%>
 
+<%-include('../views/layout')-%>
+
+<%-include('../views/partials/sidenav')-%>
 
 
 
