--- a/views/categories/computer_notes.ejs
+++ b/views/categories/computer_notes.ejs
@@ -1,8 +1,8 @@
 
 
-<%-include('../views/layout')-%>
+<%-include('../../views/layout')-%>
 
-<%-include('../views/partials/sidenav')-%>
+<%-include('../../views/partials/sidenav')-%>
 
 
 
