--- a/views/categories/electronic_notes.ejs
+++ b/views/categories/electronic_notes.ejs
@@ -1,6 +1,6 @@
-<%-include('/cart/views/layout')-%>
+<%-include('../../views/layout')-%>
 
-<%-include('/cart/views/partials/sidenav')-%>
+<%-include('../../views/partials/sidenav')-%>
 
 
 
@@ -217,7 +217,8 @@
 
 
 
-<%-include('/cart/views/partials/footer')-%>
+
+<%-include('../../views/partials/footer')-%>
 
 
 
