--- a/views/categories/made_easy_notes.ejs
+++ b/views/categories/made_easy_notes.ejs
@@ -1,6 +1,7 @@
-<%-include('/cart/views/layout')-%>
+<%-include('../../views/layout')-%>
 
-<%-include('/cart/views/partials/sidenav')-%>
+<%-include('../../views/partials/sidenav')-%>
+
 
 
 
@@ -213,7 +214,7 @@
 
 
 
-<%-include('/cart/views/partials/footer')-%>
+<%-include('../../views/partials/footer')-%>
 
 
 
