--- a/views/admin/adminlogin.ejs
+++ b/views/admin/adminlogin.ejs
@@ -1,4 +1,4 @@
-<%-include('/cart/views/toplayout')-%>
+<%-include('../../views/toplayout')-%>
 
 <style>
 @import url('https://fonts.googleapis.com/css?family=Poppins');
