--- a/views/categories/jeemains_notes.ejs
+++ b/views/categories/jeemains_notes.ejs
@@ -1,6 +1,6 @@
-<%-include('/cart/views/layout')-%>
+<%-include('../../views/layout')-%>
 
-<%-include('/cart/views/partials/sidenav')-%>
+<%-include('../../views/partials/sidenav')-%>
 
 
 
@@ -208,9 +208,7 @@
 
 
 
-
-<%-include('/cart/views/partials/footer')-%>
-
+<%-include('../../views/partials/footer')-%>
 
 
 
