--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -92,7 +92,7 @@
                 <center>Name</center>
              </div>
              <div class='col'>
-                 <%=orders[0].name%>
+                 <%=user.name%>
              </div>
           </div></br>
 
@@ -101,19 +101,12 @@
                 <center>Address</center>
              </div>
              <div class='col'>
-                 <%=orders[0].address%>
+                 <%=user.address%>
              </div>
           </div></br>
 
 
-          <div class='row ' style='border:0px solid gray;'>
-             <div class='col'>
-                <center>Contact</center>
-             </div>
-             <div class='col'>
-                 <%=orders[0].contact%>
-             </div>
-          </div></br>
+          
 
 
            <div class='row ' style='border:0px solid gray;'>
