--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -106,6 +106,16 @@
           </div></br>
 
 
+          <div class='row ' style='border:0px solid gray;'>
+             <div class='col'>
+                <center>Address</center>
+             </div>
+             <div class='col'>
+                 <%=user.contact%>
+             </div>
+          </div></br>
+
+
           
 
 
@@ -125,7 +135,7 @@
                 <center>Your Email</center>
              </div>
              <div class='col'>
-                 <%=orders[0].email%>
+                 <%=user.email%>
              </div>
           </div></br>
 
