--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -14,14 +14,7 @@
 <div class="row">
    <div class="col-md-8 col-md-offset-8 loginpart" style="margin:0 auto">
           
-          <% if(hasErrors) {%>
-           <div class="alert alert-danger" role="alert">
-			 <% for(var i=0;i<messages.length;i++) {%>
-                <p><%=messages[i]%></p>
-			 <% } %>
-		   </div>
-
-          <% } %>
+        
 
           <div class='loginform '>
                <div class="row subloginform" >
@@ -32,12 +25,31 @@
 
 				      <div class="col-lg-6" style="padding:140px 30px;">
 
+					    <% if(hasErrors) {%>
+				           <div class="alert alert-danger" role="alert">
+							 <% for(var i=0;i<messages.length;i++) {%>
+				                <p><%=messages[i]%></p>
+							 <% } %>
+						   </div>
+
+                        <% } %>
+
 				          <form action="/user/signup" method="post">
 				                 <div class="textlog">𝓡𝓮𝓰𝓲𝓼𝓽𝓮𝓻 𝓗𝓮𝓻𝓮</div>
 
 				                 <div class="form-group">
 					                 <lable for="name">Name</label>
 					                 <input type="text" id="name" name="name" class="form-control" required >
+					             </div>
+
+					             <div class="form-group">
+					                 <lable for="address">Address</label>
+					                 <input type="text" id="address" name="address" class="form-control" required >
+					             </div>
+
+					             <div class="form-group">
+					                 <lable for="contact">Contact</label>
+					                 <input type="text" id="address" name="contact" class="form-control" required >
 					             </div>
 
 					             <div class="form-group">
