--- a/public/ajstyle/style.css
+++ b/public/ajstyle/style.css
@@ -11,6 +11,20 @@
 	font-weight:bold;
 	font-size:25px;
 }
+
+@media screen and (max-width: 600px) {
+  .ebookhead
+	{
+		border:1.5px solid white;
+		padding:10px 20px;
+		
+		color:white;
+		font-family:georgia;
+		font-weight:bold;
+		font-size:15px;
+	}
+
+}
 .navbar
 {
 	background-color:rgb(0, 204, 153);
@@ -279,6 +293,23 @@ margin-right: -20px;
 	font-size: 17px;
 }
 
+.buttonx {
+  background-color: #f4511e;
+  border: none;
+  color: white;
+  padding: 9px 42px;
+  text-align: center;
+  font-size: 12px;
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 40px;
+
+}
+.buttonx:hover {opacity: 1;color:white;text-decoration: none}
 
 
 }
