--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -3,7 +3,7 @@
 <div class="row">
 
 	<div class="col-lg-6 shadow" style="margin:0 auto;padding:2% 5%;">
-	    <h4 class="checkhead" style="color:black;">Enter Your Detail</h4><hr>
+	    <h5 class="checkhead" style="color:black;">Enter Your Detail</h5><hr>
         <% if(!login) {%>
            <div class="alert alert-danger" role="alert">
               <p style="text-align:center;">Try to login first otherwise payment would not proceed</p>
@@ -36,11 +36,17 @@
 
 
                <input type="hidden" name="_csrf" value="<%=csrfToken%>" > 
-               <center><button type="submit" class="btn btn-success" style="padding:10px 50px;" name="btn" value="offline" >Pay Offline</button>
-               <button type="submit" class="btn btn-danger" style="padding:10px 50px;" name="btn" value="online">Pay Online</button></center>
+               <center><button type="submit" class="btn btn-success" style=" name="btn" value="offline" >Pay Offline</button>
+               <button type="submit" class="btn btn-danger" style="name="btn" value="online">Pay Online</button></center>
          </form>
 
          <% } %>
+         
+         </br></br>
+         <% if(login) {%>
+         <p style='color:red;text-align:center'> <span style='color:green;font-weight:bold'>Note: </span>Do not Make Online Payment </p>
+         <%}%>
+         
 	</div>
 
 </div>
