--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
 		           <div class="clearfix">
 		              <a class="price">Rs 300</a>
 		             
-		              <a href="/add-to-cart/<%=items[i][j].id%>" class="btn btn-success add">Add In Cart</a>
+		              <a href="/add-to-cart/<%=items[i][j].id%>" class="btn btn-success add">Add In Cart <i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
 		           </div> 
 		      </div>
 		    </div>
