--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
 		         <h4 class="title"><%=items[i][j].title%></h4>
 		        <p class="card-text description"><%=items[i][j].description%></p>
 		           <div class="clearfix">
-		              <a class="price">Rs 300</a>
+		              <a class="price">Rs <%=items[i][j].price%></a>
 		             
 		              <a href="/add-to-cart/<%=items[i][j].id%>" class="btn btn-success add">Add In Cart <i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
 		           </div> 
