--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -18,8 +18,8 @@
 
 	          <div class="cont"> 
 	              <span  class="footspan two">home</span> 
-	              <span class="footspan two">contact</span> 
-	             <a href="/admin/adminlogin">Admin</a>
+	              <a href="/about" style='color:white;' class='footspan two'>About</a>
+	             <a href="/admin/adminlogin" style='color:white;'>Admin</a>
               </div>
 
          </div> 
