--- a/views/preloader.ejs
+++ b/views/preloader.ejs
@@ -139,7 +139,7 @@
     <div id="loader" style='margin:0 auto'>
         
 	   
-	     <center> <img src='ajstyle/book.gif' style='width:120px;height:120px;'  ></center></br>
+	     <center> <img src='ajstyle/book3.gif' style='width:150px;height:150px;'  ></center></br>
 	     <div style='font-family:georgia;font-size:17px;text-align:center;'>Loading...</div>
 
     </div>
@@ -156,7 +156,7 @@ $(document).ready(function() {
   setTimeout(function() {
     $('.wrapper').addClass('loaded');
     
-  });
+  },3500);
 });
 
 
