--- a/views/preloader.ejs
+++ b/views/preloader.ejs
@@ -139,7 +139,7 @@
     <div id="loader" style='margin:0 auto'>
         
 	   
-	     <center> <img src='ajstyle/book3.gif' style='width:150px;height:150px;'  ></center></br>
+	     <center> <img src='ajstyle/book3.gif' style='width:150px;height:150px;border-radius: 50%'  ></center></br>
 	     <div style='font-family:georgia;font-size:17px;text-align:center;'>Loading...</div>
 
     </div>
